LEAF 4342 fix comment note overflow

--- a/LEAF_Request_Portal/css/style.css
+++ b/LEAF_Request_Portal/css/style.css
@@ -945,6 +945,7 @@ div[id*="xhrDialog"] {
 .comments_message {
   margin-left: 20px;
   padding-top: 4px;
+  word-break: break-word;
 }
 
 .tools {
